--- a/src/main/resources/message/message_zh_CN.properties
+++ b/src/main/resources/message/message_zh_CN.properties
@@ -3,5 +3,6 @@ duplicateContainerPathError=重复的容器路径
 duplicateHostPortError=重复的主机端口
 duplicateContainerPortError=重复的容器端口
 invalidNetworkDriver=无效的网络驱动：%driver%
-networkAlreadyExists=网络已经存在
+networkAlreadyExists=网络%network%已经存在
 unknownNetworkOperationException=网络操作遇到未知错误
+noSuchNetwork=网络%network%不存在
