完善了卷的管理功能

--- a/src/main/resources/message/message_zh_CN.properties
+++ b/src/main/resources/message/message_zh_CN.properties
@@ -8,3 +8,5 @@ unknownNetworkOperationException=网络操作遇到未知错误
 noSuchNetwork=网络%network%不存在
 internalServerError=内部服务器错误: %msg%
 noSuchImageException=镜像%image%不存在
+noSuchVolumeException=卷%volume%不存在
+volumeIsInUse=卷%volume%正在使用中
